@@ -11,6 +11,10 @@ PostUpgradePurge=xorg-common, libgl1-mesa
 Demotions=demoted.cfg
 RemoveEssentialOk=sysvinit
 RemovalBlacklistFile=removal_blacklist.cfg
+# if those packages were installed, make sure to keep them installed
+# we use this right now to emulate Breaks
+KeepInstalledPkgs=gnumeric, gnumeric-gtk, hpijs
+KeepInstalledSection=translations
 
 # information about the individual meta-pkgs
 [ubuntu-desktop]
@@ -28,7 +32,6 @@ KeyDependencies=edubuntu-artwork, tuxpaint
 
 [xubuntu-desktop]
 KeyDependencies=xubuntu-artwork-usplash, xubuntu-default-settings, xfce4
-
 
 [Files]
 BackupExt=distUpgrade
