@@ -3,6 +3,7 @@
 	  not use Breaks for the dapper->edgy upgrade yet 
           (see #54234 for the rationale)
 	- updated demotions.cfg for dapper->edgy
+	- special case the packages affected by the Breaks changes
 	- bugfixes
 2006-09-23:
 	- support fetching backports of selected packages first and
